syntax = "proto3";

package br.com.coregate.infrastructure;

import "common/coregate-context.proto";

option java_multiple_files = true;
option java_package = "br.com.coregate.proto.ingress";
option java_outer_classname = "ContextProto";


// =======================================================
// üì§ Ingress ‚Üí Context (request para decodifica√ß√£o ISO8583)
// =======================================================
message ContextRequestProto {
    CoreGateContext coreGateContext = 1;   // metadados operacionais
    bytes rawBytes = 2;                 // ISO8583 bruta (raw)
    string hexString = 3;               // ex.: "ISO-8859-1"
    int64 receivedAtEpochMs = 4;     // timestamp de recebimento
}

// =======================================================
// üì• Context ‚Üí Ingress (resposta recodificada p/ writeAndFlush)
// =======================================================
message ContextResponseProto {
    CoreGateContext coreGateContext = 1;   // metadados operacionais
    bytes rawBytes = 2;                 // ISO8583 bruta (raw)
    string hexString = 3;               // ex.: "ISO-8859-1"
    int64 receivedAtEpochMs = 4;     // timestamp de recebimento
}

// =======================================================
// üõ∞Ô∏è Servi√ßo gRPC (Ingress ‚Üî Context)
// =======================================================
service ContextProtoService {
    rpc Authorize (ContextRequestProto) returns (ContextResponseProto);
}
